# simplecolor

./: Cargo.toml  readme.md
src/: channel.rs  lib.rs  rgb.rs  rgba.rs  simplecolor_macros.rs
